--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,8 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
       <%= javascript_include_tag "jquery.backstretch.min" %>
       <% if !user_signed_in? %>
-        <script>    $.backstretch("../assets/background.jpg");
+        <script> $.backstretch("../assets/background.jpg"); </script>
       <% end %>
-      </script>
       <div id="wrapper">
         <!-- Top navigation menu -->
         <div id="header">
