--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,7 @@
 
 <%= render template: 'devise/sessions/new' %>
 
-<h1>Signed in!!!</h1>
+<%= render "shared/page_title", page_title: t('index_gallery') %>
+
 
 
