--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <body class="<%= controller_name %> <%= action_name %>">
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
       <%= javascript_include_tag "jquery.backstretch.min" %>
       <% if !user_signed_in? %>
         <script> $.backstretch("../assets/background.jpg"); </script>
