--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -19,6 +19,9 @@
   position: relative;
   padding: 0px;
   margin-bottom: 20px;
+  p, label, h1, h2, h3, h4, h5,th, td {
+    color: #333333;
+  }
 }
 
 //.thumbnail-image-div {
