--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -8,11 +8,16 @@
         <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
         <p><%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)</p>
           <% if locals[:item].user == current_user %>
-            <%= link_to t('Edit'), edit_item_path(locals[:item]), :class => "btn btn-info btn-xs" %>
-            <%= link_to t('Destroy'), locals[:item], method: :delete, data: { confirm: t('areYouSure') }, :class => "btn btn-info btn-xs" %>
+            <%= link_to t('Edit'), edit_item_path(locals[:item]), :class => "btn btn-info" %>
+            <%= link_to t('Destroy'), locals[:item], method: :delete, data: { confirm: t('areYouSure') }, :class => "btn btn-info" %>
           <% else %>
-            <%= link_to t('want'), want_path(locals[:item]), :class => "btn btn-info btn-xs" %>
-        <% end %>
+            <% if locals[:item].want_users.include?(current_user) %>
+              <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}),:data => { :'want_item_id' => locals[:item].id }, format: :json, remote: true, method: :post, :class => "btn btn-success" %>
+            <% else %>
+              <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}),:data => { :'want_item_id' => locals[:item].id }, format: :json, remote: true, method: :post, :class => "btn btn-default" %>
+            <% end %>
+            <%= link_to t('block'), blocks_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-danger pull-left" %>
+          <% end %>
         </p>
       </div>
     </div>
