--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,7 @@
 <%= link_to t('model.all_items'), items_path, class: "btn btn-primary btn-lg" %>
 <%= render "shared/page_title", page_title: t('model.show_item') %>
-<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-3">
-  <%= render 'item_block', locals: {item: @item}%>
+<div class="gallery">
+  <ul class="row">
+    <%= render 'item_block', locals: {item: @item}%>
+  </ul>
 </div>
-
